<resources>
    <string name="app_name">Complete Action Plus</string>
    <string name="activity_main_setting">Settings</string>
    <string name="activity_main_logo">Complete Action Plus logo</string>
    <string name="activity_main_display_always">Display \'Always\' checkbox</string>
    <string name="activity_main_manage_list">Manage List of Apps</string>
    <string name="activity_main_advanced">Advanced</string>
    <string name="activity_main_change_layout">Change layout</string>
    <string name="activity_main_layout_choice">Select layout style</string>
    <string name="activity_main_grid_columns">Number of grid columns (%s)</string>
    <string name="activity_main_list_textSize">List text size</string>
    <string name="activity_main_grid_textSize">Grid text size</string>
    <string name="activity_main_open_button">Test Open!</string>
    <string name="activity_main_share_button">Test Share!</string>
    <string name="app_icon">App Icon</string>
    <string name="manage_list_title">Manage Apps in List</string>
    <string name="manage_list_item_off">OFF</string>
    <string name="manage_list_item_on">ON</string>
    <string name="manage_list_action">Action:</string>
    <string name="manage_list_type">Type:</string>
    <string name="manage_list_scheme">Scheme:</string>
    <string name="manage_list_not_available">N/A</string>
    <string name="manage_list_warning">Please keep at least two apps active in the list.</string>
    <string name="list_item_favourite_button">Favourite app</string>
    <string name="app_theme">This App Theme</string>
    <string name="activity_main_xhalo">Long Press will start app in XHalo</string>
    <string name="portrait">Portrait</string>
    <string name="landscape">Landscape</string>
    <string name="activity_main_layout_theme">Layout theme</string>
    <string name="fragment_about">About</string>
    <string name="fragment_dialog">Dialog</string>
    <string name="fragment_layout">Layout</string>
    <string name="app_version">Version</string>
    <string name="grid_dont_reduce_columns">Don\'t reduce columns for less apps</string>
    <string name="dialog_gravity">Dialog position (%s)</string>
    <string name="manage_trigger_style">Manage trigger style</string>
    <string name="text_color">Text color</string>
    <string name="background_color">Background color</string>
    <string name="xposed_not_installed">Xposed Framework is not installed.\nContinue to Xposed Framework thread?</string>
    <string name="mod_not_activated">This mod is not activated or device didn\'t restart yet.</string>
    <string name="not_yet_restarted">Please restart first.</string>
    <string name="show_rule_manager">Show rule manager</string>
    <string name="activity_manager_title">Rule Manager</string>
    <string name="fragment_hidden">Hidden</string>
    <string name="fragment_favorite">Favorite</string>
    <string name="fragment_added">Added</string>
    <string name="manager_rule_delete">Delete rule</string>
    <string name="manager_rule_delete_confirm">Are you sure to delete this rule?</string>
    <string name="advanced_allow_one_item">Allow to keep only one app remain</string>
    <string name="manage_list_warning_one">Please keep at least one app active in the list.</string>
    <string name="advanced_rule_per_domain">Rules per every website domain</string>
    <string name="manager_backup_rules">Backup Rules</string>
    <string name="manager_restore_rules">Restore Rules</string>
    <string name="manager_backup_failed">Backup failed.</string>
    <string name="manager_backup_success">Backup done.</string>
    <string name="manager_backup_send">Do you want to send out this backup?</string>
    <string name="manager_no_backup">There is no backup found.</string>
    <string name="manager_choose_backup">Choose backup to restore</string>
    <string name="manager_invalid_backup">Invalid backup</string>
    <string name="manager_restore_failed">Restore failed.</string>
    <string name="manager_restore_success">Restore success.</string>
    <string name="manager_restore_intent">Do you want to restore rules from %s ?</string>
    <string name="advanced_share_set">Set</string>
    <string name="debug_turn_on">Enable extra debug messages in log</string>
    <string name="advanced_no_package_manager_hook">Hide apps using 1.9 version way\n(Only if you have issues with \'Always\' checkbox.)</string>
    <string name="keep_bottom_buttons">Keep \'Once\' and \'Always\' buttons</string>
    <string name="transparency">Transparency</string>
    <string name="title_color">Title color</string>
    <string name="round_corners">Round corners</string>
    <string name="autostart_timeout">Auto-start first app in seconds</string>
    <string name="long_press_action">Long press app action</string>
    <string name="doubletap_action">Double Tap app action</string>
    <string name="developedby">Developed by Pavel Valenta</string>
    <string name="visit_xda">Visit the thread at XDA for support!</string>
    <string name="xda_link">http://forum.xda-developers.com/showthread.php?t=2588306</string>
    <string name="xposed_description">Tweaks Open and Share android dialog. One click launch, manage apps, change layout and much more.</string>
    <string name="intent_recorder">Intent Recorder</string>
    <string name="intent_record_start">Record</string>
    <string name="intent_record_stop">Stop</string>
    <string name="intent_recording_refresh">Refresh</string>
    <string name="intent_record_note">Hit \'Record\' to start recording.</string>
    <string name="intent_record_captured">%d intents captured</string>
    <string name="intent_recording">Intent recording active</string>   
    <string name="intent_record_number_apps">%d default apps</string>
    <string name="add_activity_feature">Enable to add custom activity\n(experimental feature)</string>
    <string name="add_activity">Add Activity</string> 
    <string name="add_activity_note">Select activity which have similar action or type or scheme as these could possibly work.</string>
    <string name="add_no_activity">None of activities is selected.</string>
    <string name="test_intent">Test Intent</string>
    <string name="button_theme">Buttons theme</string>
    <string name="grid_flip_left_right">Flip items from left to right</string>
    <string name="flip_top_bottom">Flip items from top to bottom</string>
    <string name="show_launcher_icon">Show icon in launcher</string>
    <string name="last_used_app_first">Last used app goes first</string>
    <string name="temporary_default_timeout">Temporary default for %d minutes</string>
    <string name="set_temporary_default" formatted="false">%s is set default for %d minutes</string>
</resources>
