<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingEnd="15dp"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    android:paddingStart="15dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AboutFragment" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <Spinner
            android:id="@+id/fragment_about_theme_spinner"
            style="@style/DropDown"
            android:layout_alignParentEnd="true" />

        <TextView
            android:id="@+id/fragment_about_theme_label"
            style="@style/LabelDropDown"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/fragment_about_theme_spinner"
            android:layout_toStartOf="@id/fragment_about_theme_spinner"
            android:gravity="center_vertical"
            android:text="@string/app_theme" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <CheckBox
            android:id="@+id/fragment_about_debug_checkbox"
            style="@style/Checkbox"
            android:layout_alignParentEnd="true" />

        <TextView
            style="@style/LabelTextView"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/fragment_about_debug_checkbox"
            android:layout_toStartOf="@id/fragment_about_debug_checkbox"
            android:gravity="center_vertical"
            android:text="@string/debug_turn_on" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/fragment_about_manager"
            style="@android:style/Widget.Button.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/show_rule_manager" />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="100dp"
        android:text="@string/developedby" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:text="@string/visit_xda" />
    
    <TextView android:id="@+id/fragment_about_xda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:textColor="@android:color/holo_blue_dark"
        android:text="@string/xda_link" />
</LinearLayout>