<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:gravity="center_vertical" 
    android:orientation="horizontal" 
    android:layout_width="fill_parent" 
    android:layout_height="52dp">
    
    <ImageView android:id="@+id/list_item_icon" 
        android:layout_width="@dimen/app_icon_size" 
        android:layout_height="@dimen/app_icon_size" 
        android:contentDescription="@string/app_icon"
        android:scaleType="fitCenter" />
    
    <RelativeLayout android:gravity="center_vertical" 
        android:layout_width="wrap_content" 
        android:layout_height="fill_parent">
        
        <TextView android:id="@+id/list_item_title" 
            android:paddingLeft="16dp" 
            android:paddingStart="16dp"
            android:paddingRight="60dp"
            android:paddingEnd="60dp"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content" 
            android:textAppearance="@android:style/TextAppearance.Small"
            android:textSize="15sp"
            android:maxLines="3" />
        
        <ToggleButton android:id="@+id/list_item_hide_button"
            android:textOff="@string/manage_list_item_off"
            android:textOn="@string/manage_list_item_on"
            android:layout_centerVertical="true"
        	android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="2dp"
            android:layout_marginEnd="2dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        
        <ImageButton android:id="@+id/list_item_favourite_button"
            android:src="@android:drawable/btn_star_big_off"
            android:contentDescription="@string/list_item_favourite_button"
            android:background="@android:color/transparent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@id/list_item_hide_button"
            android:layout_toLeftOf="@id/list_item_hide_button"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp" />
        
	</RelativeLayout>
</LinearLayout>