<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TestIntentActivity" >

    <ImageView
        android:id="@+id/test_intent_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/activity_main_logo"
        android:paddingLeft="15dp"
        android:paddingStart="15dp"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/test_intent_logo"
        android:layout_toEndOf="@id/test_intent_logo"
        android:layout_toRightOf="@id/test_intent_logo"
        android:paddingLeft="20dp"
        android:paddingStart="20dp"
        android:text="@string/test_intent"
        android:textSize="22sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/test_intent_line1"
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_below="@id/test_intent_logo"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/test_intent_line1"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:orientation="vertical"
        android:paddingTop="20dp" >

        <TextView
            android:id="@+id/test_intent_action_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/manage_list_action"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/test_intent_action_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/test_intent_type_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/manage_list_type"
            android:paddingTop="20dp"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/test_intent_type_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/test_intent_scheme_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/manage_list_scheme"
            android:paddingTop="20dp"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/test_intent_scheme_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp" />
    </LinearLayout>

</RelativeLayout>