<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="0dip"
    android:paddingRight="0dip"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainPagerActivity" >
  
    <ImageView android:id="@+id/main_pager_logo"
        android:src="@drawable/ic_launcher"
        android:contentDescription="@string/activity_main_logo"
        android:paddingLeft="15dp"
        android:paddingStart="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    
    <TextView android:text="@string/app_name"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_centerInParent="true"
        android:layout_alignBottom="@id/main_pager_logo"
        android:paddingLeft="20dp"
        android:paddingStart="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>    
        
     <TextView android:id="@+id/main_pager_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
	    android:textSize="15sp"
	    android:textStyle="bold"
	    android:paddingRight="15dp"
	    android:paddingEnd="15dp"
	    android:layout_alignBottom="@id/main_pager_logo"
     	android:layout_alignParentEnd="true"
      	android:layout_alignParentRight="true" />
     
    <LinearLayout android:id="@+id/main_pager_button_bar" 
        android:layout_alignParentBottom="true" 
        android:layout_centerHorizontal="true"
        android:orientation="horizontal" 
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
	
		<Button android:onClick="openButtonClick"
	       android:text="@string/activity_main_open_button"
	       style="@android:style/Widget.Button.Small"
	       android:layout_width="wrap_content"
	       android:layout_height="wrap_content"/>
	
	   <Button android:onClick="shareButtonClick"
	       android:text="@string/activity_main_share_button"
	       style="@android:style/Widget.Button.Small"
	       android:layout_width="wrap_content"
	       android:layout_height="wrap_content"/>
	         
   	</LinearLayout>		        
    
    <android.support.v4.view.ViewPager
        android:id="@+id/main_pager_viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/main_pager_button_bar"
        android:layout_below="@id/main_pager_logo"
        android:paddingTop="5dp" >
        
	    <android.support.v4.view.PagerTitleStrip
	        android:id="@+id/main_pager_title_strip"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_gravity="top"
	        android:background="#4BAAC8"
	        android:textColor="#fff"
	        android:textSize="20sp"
	        android:paddingTop="4dp"
	        android:paddingBottom="4dp" />        
        
    </android.support.v4.view.ViewPager>
    
       
</RelativeLayout>
